# ancient-architecture-journey

./: .gitignore  CMakeLists.txt  README.md  开发文档.md
assets/: image_prompts.md
assets/levels/: level1.txt  level2.txt
phaser/: .gitignore  README.md  index.html  package-lock.json  package.json
phaser/scripts/: normalize-player-frames.mjs  remove-green-screen.mjs  sync-assets.mjs
phaser/src/: config.ts  constants.ts  main.ts  style.css
phaser/src/audio/: AudioManager.ts
phaser/src/data/: assets.ts  levels.ts  materials.ts  story.ts
phaser/src/objects/: Collectible.ts  Enemy.ts  Player.ts  TilePlatform.ts  Trap.ts
phaser/src/scenes/: BootScene.ts  FinalScene.ts  GameOverScene.ts  GameScene.ts  LevelCompleteScene.ts  LevelSelectScene.ts  MainMenuScene.ts  PreloadScene.ts  StoryScene.ts
phaser/src/systems/: AchievementManager.ts
phaser/src/ui/: AchievementToast.ts  Button.ts  DebugOverlay.ts  DialogueBox.ts  Hud.ts  ParallaxBackground.ts
phaser/src/utils/: controls.ts  levelValidation.ts
src/: Collectible.h  Collision.cpp  Collision.h  Constants.h  Enemy.cpp  Enemy.h  Entity.h  Game.cpp  Game.h  Level.cpp  Level.h  LevelData.cpp  LevelData.h  Player.cpp  Player.h  TextureManager.cpp  TextureManager.h  Trap.h  UI.h  main.cpp
tools/: generate_assets.py  generate_minimal_assets.py  postprocess_chromakey.py
